--- a/codes/16_nlp_with_rnns_and_attention.ipynb
+++ b/codes/16_nlp_with_rnns_and_attention.ipynb
@@ -811,11 +811,429 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 16.3 신경망 기계 번역을 위한 인코더-디코더 네트워크"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip\n",
+      "2638744/2638744 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "url = 'https://storage.googleapis.com/download.tensorflow.org/data/spa-eng.zip'\n",
+    "path = tf.keras.utils.get_file('spa-eng.zip', origin=url, cache_dir = 'datasets', extract=True)\n",
+    "text = (Path(path).with_name('spa-eng') / 'spa.txt').read_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "text = text.replace('i', '').replace('¿', '')\n",
+    "pairs = [line.split('\\t') for line in text.splitlines()]\n",
+    "np.random.shuffle(pairs)\n",
+    "sentences_en, sentences_es = zip(*pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You shouldn't have pad the bll. => You shouldn't have pad the bll.\n",
+      "I need all the practce I can get. => I need all the practce I can get.\n",
+      "That shouldn't be a problem n ths case. => That shouldn't be a problem n ths case.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print(sentences_en[i], '=>', sentences_en[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-31 16:22:27.299040: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:22:32.528985: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = 1000\n",
+    "max_length = 50\n",
+    "text_vec_layer_en = tf.keras.layers.TextVectorization(vocab_size, output_sequence_length=max_length)\n",
+    "text_vec_layer_es = tf.keras.layers.TextVectorization(vocab_size, output_sequence_length=max_length)\n",
+    "text_vec_layer_en.adapt(sentences_en)\n",
+    "text_vec_layer_es.adapt([f'startofseq {s} endofseq' for s in sentences_es])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '[UNK]', 'the', 'i', 'to', 'you', 'tom', 'a', 's', 'he']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_vec_layer_en.get_vocabulary()[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '[UNK]', 'startofseq', 'endofseq', 'de', 'que', 'a', 'no', 'tom', 'la']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_vec_layer_es.get_vocabulary()[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = tf.constant(sentences_en[:100_000])\n",
+    "X_valid = tf.constant(sentences_en[100_000:])\n",
+    "X_train_dec = tf.constant([f'startofseq {s}' for s in sentences_es[:100_000]])\n",
+    "X_valid_dec = tf.constant([f'startofseq {s}' for s in sentences_es[100_000:]])\n",
+    "Y_train = text_vec_layer_es([f'{s} endofseq' for s in sentences_es[:100_000]])\n",
+    "Y_valid = text_vec_layer_es([f'{s} endofseq' for s in sentences_es[100_000:]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_inputs = tf.keras.layers.Input(shape=[], dtype=tf.string)\n",
+    "decoder_inputs = tf.keras.layers.Input(shape=[], dtype=tf.string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_size = 128\n",
+    "encoder_inputs_ids = text_vec_layer_en(encoder_inputs)\n",
+    "decoder_inputs_ids = text_vec_layer_es(decoder_inputs)\n",
+    "encoder_embedding_layer = tf.keras.layers.Embedding(vocab_size, embed_size, mask_zero=True)\n",
+    "decoder_embedding_layer = tf.keras.layers.Embedding(vocab_size, embed_size, mask_zero=True)\n",
+    "encoder_embeddings = encoder_embedding_layer(encoder_inputs_ids)\n",
+    "decoder_embeddings = decoder_embedding_layer(decoder_inputs_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = tf.keras.layers.LSTM(512, return_state=True)\n",
+    "encoder_outputs, *encoder_state = encoder(encoder_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoder = tf.keras.layers.LSTM(512, return_sequences=True)\n",
+    "decoder_outputs = decoder(decoder_embeddings, initial_state=encoder_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_layer = tf.keras.layers.Dense(vocab_size, activation='softmax')\n",
+    "Y_proba = output_layer(decoder_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-31 16:46:58.923879: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:46:59.553081: W tensorflow/core/common_runtime/type_inference.cc:339] Type inference failed. This indicates an invalid graph that escaped type checking. Error message: INVALID_ARGUMENT: expected compatible input types, but input 1:\n",
+      "type_id: TFT_OPTIONAL\n",
+      "args {\n",
+      "  type_id: TFT_PRODUCT\n",
+      "  args {\n",
+      "    type_id: TFT_TENSOR\n",
+      "    args {\n",
+      "      type_id: TFT_INT32\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      " is neither a subtype nor a supertype of the combined inputs preceding it:\n",
+      "type_id: TFT_OPTIONAL\n",
+      "args {\n",
+      "  type_id: TFT_PRODUCT\n",
+      "  args {\n",
+      "    type_id: TFT_TENSOR\n",
+      "    args {\n",
+      "      type_id: TFT_FLOAT\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "\tfor Tuple type infernce function 0\n",
+      "\twhile inferring type of node 'cond_40/output/_23'\n",
+      "2023-10-31 16:46:59.557679: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:46:59.982819: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:47:00.316980: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:47:00.686237: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125/3125 [==============================] - ETA: 0s - loss: 3.5622 - accuracy: 0.3128"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-31 16:51:18.478870: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:51:18.906063: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 16:51:19.107244: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125/3125 [==============================] - 282s 89ms/step - loss: 3.5622 - accuracy: 0.3128 - val_loss: 3.2777 - val_accuracy: 0.3311\n",
+      "Epoch 2/10\n",
+      "3125/3125 [==============================] - 278s 89ms/step - loss: 3.1824 - accuracy: 0.3404 - val_loss: 3.1375 - val_accuracy: 0.3491\n",
+      "Epoch 3/10\n",
+      "3125/3125 [==============================] - 299s 96ms/step - loss: 3.0445 - accuracy: 0.3535 - val_loss: 3.0796 - val_accuracy: 0.3469\n",
+      "Epoch 4/10\n",
+      "3125/3125 [==============================] - 354s 113ms/step - loss: 2.9549 - accuracy: 0.3586 - val_loss: 3.0378 - val_accuracy: 0.3519\n",
+      "Epoch 5/10\n",
+      "3125/3125 [==============================] - 326s 104ms/step - loss: 2.8692 - accuracy: 0.3681 - val_loss: 3.0184 - val_accuracy: 0.3562\n",
+      "Epoch 6/10\n",
+      "3125/3125 [==============================] - 332s 106ms/step - loss: 2.7860 - accuracy: 0.3788 - val_loss: 2.9517 - val_accuracy: 0.3685\n",
+      "Epoch 7/10\n",
+      "3125/3125 [==============================] - 328s 105ms/step - loss: 2.6612 - accuracy: 0.4017 - val_loss: 2.9375 - val_accuracy: 0.3754\n",
+      "Epoch 8/10\n",
+      "3125/3125 [==============================] - 3576s 1s/step - loss: 2.6302 - accuracy: 0.4049 - val_loss: 2.9672 - val_accuracy: 0.3719\n",
+      "Epoch 9/10\n",
+      "3125/3125 [==============================] - 262s 84ms/step - loss: 2.6049 - accuracy: 0.4033 - val_loss: 3.0372 - val_accuracy: 0.3560\n",
+      "Epoch 10/10\n",
+      "3125/3125 [==============================] - 293s 94ms/step - loss: 2.5475 - accuracy: 0.4104 - val_loss: 3.0583 - val_accuracy: 0.3533\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1512ef610>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = tf.keras.Model(inputs = [encoder_inputs, decoder_inputs], outputs = [Y_proba])\n",
+    "model.compile(loss = 'sparse_categorical_crossentropy', optimizer='nadam', metrics = ['accuracy'])\n",
+    "model.fit((X_train, X_train_dec), Y_train, epochs = 10, validation_data=((X_valid, X_valid_dec), Y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translate(sentence_en):\n",
+    "    translation = ''\n",
+    "    for word_idx in range(max_length):\n",
+    "        X = np.array([sentence_en])\n",
+    "        X_dec = np.array(['startofseq ' + translation])\n",
+    "        y_proba = model.predict((X, X_dec))[0, word_idx]\n",
+    "        predicted_word_id = np.argmax(y_proba)\n",
+    "        predicted_word = text_vec_layer_es.get_vocabulary()[predicted_word_id]\n",
+    "        if predicted_word == 'endofseq':\n",
+    "            break\n",
+    "        translation += \" \" + predicted_word\n",
+    "    return translation.strip()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-31 18:32:28.783861: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 18:32:29.368715: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-31 18:32:29.658688: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 2s 2s/step\n",
+      "1/1 [==============================] - 0s 56ms/step\n",
+      "1/1 [==============================] - 0s 77ms/step\n",
+      "1/1 [==============================] - 0s 59ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'tom no [UNK] [UNK]'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate(\"I like soccer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 55ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'tom no [UNK] [UNK]'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate(\"I like soccer and also going to the beach\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16.3.1 양방향 RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(256, return_state=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_outputs, *encoder_state = encoder(encoder_embeddings)\n",
+    "encoder_state = [tf.concat(encoder_state[::2], axis=-1),\n",
+    "                 tf.concat(encoder_state[1::2], axis=-1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 16.3.2 빔 서치"
+   ]
   }
  ],
  "metadata": {
