--- a/codes/12_custom_models_and_training_with_tensorflow.ipynb
+++ b/codes/12_custom_models_and_training_with_tensorflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,6 +460,629 @@
    "metadata": {},
    "source": [
     "## 12.3 사용자 정의 모델과 훈련 알고리즘"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.1 사용자 정의 손실 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "housing = fetch_california_housing()\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(\n",
+    "    housing.data, housing.target.reshape(-1, 1), random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X_train_full, y_train_full, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_valid_scaled = scaler.transform(X_valid)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "input_shape = X_train.shape[1:]\n",
+    "\n",
+    "tf.random.set_seed(42)\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(30, activation=\"relu\", kernel_initializer=\"he_normal\",\n",
+    "                          input_shape=input_shape),\n",
+    "    tf.keras.layers.Dense(1),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def huber_fn(y_true, y_pred):\n",
+    "    error = y_true - y_pred\n",
+    "    is_small_error = tf.abs(error) < 1\n",
+    "    squared_loss = tf.square(error) / 2\n",
+    "    linear_loss = tf.abs(error) - 0.5\n",
+    "    return tf.where(is_small_error, squared_loss, linear_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=huber_fn, optimizer=\"nadam\", metrics=[\"mae\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-08 13:31:50.485044: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:117] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "363/363 [==============================] - 4s 10ms/step - loss: 0.6031 - mae: 0.9750 - val_loss: 0.3467 - val_mae: 0.6278\n",
+      "Epoch 2/2\n",
+      "363/363 [==============================] - 3s 9ms/step - loss: 0.2171 - mae: 0.5079 - val_loss: 0.3698 - val_mae: 0.6561\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x163338100>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_scaled, y_train, epochs=2,\n",
+    "          validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"my_model_with_a_custom_loss\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.2 사용자 정의 요소를 가진 모델을 저장하고 로드하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model('./my_model_with_a_custom_loss/', custom_objects={'huber_fn': huber_fn})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_huber(threshold=1.0):\n",
+    "    def huber_fn(y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss = threshold + tf.abs(error) - threshold ** 2 / 2\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    return huber_fn\n",
+    "\n",
+    "model.compile(loss=create_huber(2.0), optimizer = 'nadam', metrics=[\"mae\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "363/363 [==============================] - 4s 10ms/step - loss: 0.2378 - mae: 0.5117 - val_loss: 0.3804 - val_mae: 0.6461\n",
+      "Epoch 2/2\n",
+      "363/363 [==============================] - 3s 9ms/step - loss: 0.2373 - mae: 0.5116 - val_loss: 0.3972 - val_mae: 0.6703\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1636b94e0>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_scaled, y_train, epochs=2,\n",
+    "          validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss_threshold_2/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss_threshold_2/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"my_model_with_a_custom_loss_threshold_2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model(\n",
+    "    './my_model_with_a_custom_loss_threshold_2',\n",
+    "    custom_objects={'huber_fn': create_huber(2.0)}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "363/363 [==============================] - 4s 10ms/step - loss: 0.2371 - mae: 0.5118 - val_loss: 0.3754 - val_mae: 0.6412\n",
+      "Epoch 2/2\n",
+      "363/363 [==============================] - 3s 9ms/step - loss: 0.2369 - mae: 0.5112 - val_loss: 0.3937 - val_mae: 0.6669\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x2c4f27d90>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_scaled, y_train, epochs=2,\n",
+    "          validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HuberLoss(tf.keras.losses.Loss):\n",
+    "    def __init__(self, threshold=1.0, **kwargs):\n",
+    "        self.threshold = threshold\n",
+    "        super().__init__(**kwargs)\n",
+    "\n",
+    "    def call(self, y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < self.threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss = self.threshold * tf.abs(error) - self.threshold**2 / 2\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, 'threshold': self.threshold}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.random.set_seed(42)\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(30, activation=\"relu\", kernel_initializer=\"he_normal\",\n",
+    "                          input_shape=input_shape),\n",
+    "    tf.keras.layers.Dense(1),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=HuberLoss(2.), optimizer=\"nadam\", metrics=[\"mae\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "363/363 [==============================] - 4s 11ms/step - loss: 0.9754 - mae: 1.0909 - val_loss: 0.6148 - val_mae: 0.7044\n",
+      "Epoch 2/2\n",
+      "363/363 [==============================] - 4s 10ms/step - loss: 0.2753 - mae: 0.5326 - val_loss: 0.5879 - val_mae: 0.6705\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x2c5be91e0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train_scaled, y_train, epochs=2,\n",
+    "          validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss_class/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: my_model_with_a_custom_loss_class/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"my_model_with_a_custom_loss_class\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.load_model('./my_model_with_a_custom_loss_class', custom_objects={'HuberLoss': HuberLoss})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.3 활성화 함수, 초기화, 규제, 제한을 커스터마이징하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_softplus(z):\n",
+    "    return tf.math.log(1.0 + tf.exp(z))\n",
+    "\n",
+    "def my_glorot_initializer(shape, dtype=tf.float32):\n",
+    "    stddev = tf.sqrt(2. / (shape[0] + shape[1]))\n",
+    "    return tf.random.normal(shape, stddev=stddev, dtype=dtype)\n",
+    "\n",
+    "def my_l1_regularizer(weights):\n",
+    "    return tf.reduce_sum(tf.abs(0.01 * weights))\n",
+    "\n",
+    "def my_positive_weights(weights):\n",
+    "    return tf.where(weights < 0., tf.zeros_like(weights), weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = tf.keras.layers.Dense(1, activation=my_softplus,\n",
+    "                              kernel_initializer=my_glorot_initializer,\n",
+    "                              kernel_regularizer=my_l1_regularizer,\n",
+    "                              kernel_constraint=my_positive_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyL1Regularizer(tf.keras.regularizers.Regularizer):\n",
+    "    def __init__(self, factor):\n",
+    "        self.factor = factor\n",
+    "\n",
+    "    def __call__(self, weights):\n",
+    "        return tf.reduce_sum(tf.abs(self.factor * weights))\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        return {'factor': self.factor}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.4 사용자 정의 지표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.8>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision = tf.keras.metrics.Precision()\n",
+    "precision([0, 1, 1, 1, 0, 1, 0, 1], [1, 1, 0, 1, 0, 1, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.5>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision([0, 1, 0, 0, 1, 0, 1, 1], [1, 0, 1, 1, 0, 0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.5>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'true_positives:0' shape=(1,) dtype=float32, numpy=array([4.], dtype=float32)>,\n",
+       " <tf.Variable 'false_positives:0' shape=(1,) dtype=float32, numpy=array([4.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision.variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.0>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision.reset_states()\n",
+    "precision.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HuberMetrics(tf.keras.metrics.Metric):\n",
+    "    def __init__(self, threshold=1.0, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.threshold = threshold\n",
+    "        self.huber_fn = create_huber(threshold)\n",
+    "        self.total = self.add_weight('total', initializer='zeros')\n",
+    "        self.count = self.add_weight('count', initializer='zeros')\n",
+    "\n",
+    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
+    "        sample_metrics = self.huber_fn(y_true, y_pred)\n",
+    "        self.total.assign_add(tf.reduce_sum(sample_metrics))\n",
+    "        self.count.assign_add(tf.cast(tf.size(y_true), tf.float32))\n",
+    "\n",
+    "    def result(self):\n",
+    "        return self.total / self.count\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, 'threshold': self.threshold}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.5 사용자 정의 층"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exponential_layer = tf.keras.layers.Lambda(lambda x: tf.exp(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDense(tf.keras.layers.Layer):\n",
+    "    def __init__(self, units, activation=None, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.units = units\n",
+    "        self.activation = tf.keras.activations.get(activation)\n",
+    "\n",
+    "    def build(self, batch_input_shape):\n",
+    "        self.kernel = self.add_weight(name = 'kernel', shape=[batch_input_shape[-1], self.units], initializer='glorot_normal')\n",
+    "        self.bias = self.add_weight(name='bias', shape=[self.units], initializer='zeros')\n",
+    "    \n",
+    "    def call(self, X):\n",
+    "        return self.activation(X @ self.kernel + self.bias)\n",
+    "    \n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, 'units': self.units, 'activation': tf.keras.activations.serialize(self.activation)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyGaussianNoise(tf.keras.layers.Layer):\n",
+    "    def __init__(self, stddev, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.stddev = stddev\n",
+    "\n",
+    "    def call(self, X, training = False):\n",
+    "        if training:\n",
+    "            noise = tf.random.normal(tf.shape(X), stddev=self.stddev)\n",
+    "            return X + noise\n",
+    "        else:\n",
+    "            return X"
    ]
   },
   {
