--- a/codes/12_custom_models_and_training_with_tensorflow.ipynb
+++ b/codes/12_custom_models_and_training_with_tensorflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,6 +1083,225 @@
     "            return X + noise\n",
     "        else:\n",
     "            return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.6 사용자 정의 모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualBlock(tf.keras.layers.Layer):\n",
+    "    def __init__(self, n_layers, n_neurons, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [tf.keras.layers.Dense(n_neurons, activation='relu', kernel_initializer='he_normal')\n",
+    "                       for _ in range(n_layers)]\n",
+    "        \n",
+    "    def call(self, inputs):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        return inputs + Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualRegressor(tf.keras.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden1 = tf.keras.layers.Dense(30, activation='relu', kernel_initializer='he_normal')\n",
+    "        self.block1 = ResidualBlock(2, 30)\n",
+    "        self.block2 = ResidualBlock(2, 30)\n",
+    "        self.out = tf.keras.layers.Dense(output_dim)\n",
+    "    \n",
+    "    def call(self, inputs):\n",
+    "        Z = self.hidden1(inputs)\n",
+    "        for _ in range(1 + 3):\n",
+    "            Z = self.block1(Z)\n",
+    "        Z = self.block2(Z)\n",
+    "        return self.out(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.7 모델 구성 요소에 기반한 손실과 지표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReconstructingRegressor(tf.keras.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [tf.keras.layers.Dense(30, activation='relu', kernel_initializer='he_normal')\n",
+    "                       for _ in range(5)]\n",
+    "        self.out = tf.keras.layers.Dense(output_dim)\n",
+    "        self.reconstruction_mean = tf.keras.metrics.Mean(name = 'reconstruction_error')\n",
+    "\n",
+    "    def build(self, batch_input_shape):\n",
+    "        n_inputs = batch_input_shape[-1]\n",
+    "        self.reconstruct = tf.keras.layers.Dense(n_inputs)\n",
+    "\n",
+    "    def call(self, inputs, training = False):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        reconstruction = self.reconstruct(Z)\n",
+    "        recon_loss = tf.reduce_mean(tf.square(reconstruction - inputs))\n",
+    "        self.add_loss(0.05 * recon_loss)\n",
+    "        if training:\n",
+    "            result = self.reconstruction_mean(recon_loss)\n",
+    "            self.add_metric(result)\n",
+    "        return self.out(Z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.8 자동 미분으로 그레이디언트 계산하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + 2 * w1 * w2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.000003007075065"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1, w2 = 5, 3\n",
+    "eps = 1e-6\n",
+    "(f(w1 + eps, w2) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.000000003174137"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f(w1, w2 + eps) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=35.999996>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1, w2 = tf.Variable(5.), tf.Variable(3.)\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "dz_dw1 = tape.gradient(z, w1)\n",
+    "dz_dw2 = tape.gradient(z, w2)\n",
+    "del tape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=29.999996>, None]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + tf.stop_gradient(2 * w1 * w2)\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.3.9 사용자 정의 훈련 반복"
    ]
   },
   {
