--- a/codes/17_autoencoders_gans_and_diffusion_models.ipynb
+++ b/codes/17_autoencoders_gans_and_diffusion_models.ipynb
@@ -461,6 +461,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 17.6 희소 오토인코더"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-21 17:11:04.881400: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-11-21 17:11:04.881420: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-11-21 17:11:04.881429: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-11-21 17:11:04.881478: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-11-21 17:11:04.881512: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparse_l1_encoder = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(100, activation='relu'),\n",
+    "    tf.keras.layers.Dense(300, activation='sigmoid'),\n",
+    "    tf.keras.layers.ActivityRegularization(l1=1e-4)\n",
+    "])\n",
+    "sparse_l1_decoder = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(100, activation='relu'),\n",
+    "    tf.keras.layers.Dense(28 * 28),\n",
+    "    tf.keras.layers.Reshape([28, 28])\n",
+    "])\n",
+    "sparse_l1_ae = tf.keras.Sequential([sparse_l1_encoder, sparse_l1_decoder])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 17.7 변이형 오토인코더"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
