--- a/codes/17_autoencoders_gans_and_diffusion_models.ipynb
+++ b/codes/17_autoencoders_gans_and_diffusion_models.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +504,143 @@
    "metadata": {},
    "source": [
     "## 17.7 변이형 오토인코더"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 17.8 생성적 적대 신경망"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-22 18:49:46.689459: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-11-22 18:49:46.689805: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-11-22 18:49:46.689833: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-11-22 18:49:46.690733: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-11-22 18:49:46.691685: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "codings_size = 30\n",
+    "\n",
+    "Dense = tf.keras.layers.Dense\n",
+    "generator = tf.keras.Sequential([\n",
+    "    Dense(100, activation='relu', kernel_initializer='he_normal'),\n",
+    "    Dense(150, activation='relu', kernel_initializer='he_normal'),\n",
+    "    Dense(28 * 28, activation='sigmoid'),\n",
+    "    tf.keras.layers.Reshape([28, 28])\n",
+    "])\n",
+    "\n",
+    "discriminator = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    Dense(150, activation = 'relu', kernel_initializer='he_normal'),\n",
+    "    Dense(100, activation='relu', kernel_initializer='he_normal'),\n",
+    "    Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "gan = tf.keras.Sequential([generator, discriminator])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discriminator.compile(loss='binary_crossentropy', optimizer='rmsprop')\n",
+    "discriminator.trainable = False\n",
+    "gan.compile(loss = 'binary_crossentropy', optimizer='rmsprop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "dataset = tf.data.Dataset.from_tensor_slices(X_train).shuffle(buffer_size = 1000)\n",
+    "dataset = dataset.batch(batch_size, drop_remainder = True).prefetch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_gan(gan, dataset, batch_size, codings_size, n_epochs):\n",
+    "    generator, discriminator = gan.layers\n",
+    "\n",
+    "    for epoch in range(n_epochs):\n",
+    "        for X_batch in dataset:\n",
+    "            # 판별자 훈련\n",
+    "            noise = tf.random.normal(shape=[batch_size, codings_size])\n",
+    "            generated_images = generator(noise)\n",
+    "            X_fake_and_real = tf.concat([generated_images, X_batch], axis = 0)\n",
+    "            y1 = tf.constant([[0.]] * batch_size + [[1.]] * batch_size)\n",
+    "            discriminator.train_on_batch(X_fake_and_real, y1)\n",
+    "            # 생성자 훈련\n",
+    "            noise = tf.random.normal(shape=[batch_size, codings_size])\n",
+    "            y2 = tf.constant([[1.]] * batch_size)\n",
+    "            gan.train_on_batch(noise, y2)\n",
+    "\n",
+    "train_gan(gan, dataset, batch_size, codings_size, n_epochs=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 72ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "codings = tf.random.normal(shape=[batch_size, codings_size])\n",
+    "generated_images = generator.predict(codings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17.8.1 GAN 훈련의 어려움"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17.8.2 심층 합성곱 GAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17.8.3 ProGAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17.8.4 StyleGAN"
    ]
   },
   {
