--- a/codes/17_autoencoders_gans_and_diffusion_models.ipynb
+++ b/codes/17_autoencoders_gans_and_diffusion_models.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +641,79 @@
    "metadata": {},
    "source": [
     "### 17.8.4 StyleGAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 17.9 확산 모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def variance_schedule(T, s=0.008, max_beta=0.999):\n",
+    "    t = np.arange(T + 1)\n",
+    "    f = np.cos((t / T + s) / (1 + s) * np.pi / 2) ** 2\n",
+    "    alpha = np.clip(f[1:] / f[:-1], 1 - max_beta, 1)\n",
+    "    alpha = np.append(1, alpha).astype(np.float32)\n",
+    "    beta = 1 - alpha\n",
+    "    alpha_cumprod = np.cumprod(alpha)\n",
+    "    return alpha, alpha_cumprod, beta\n",
+    "\n",
+    "T = 4000\n",
+    "alpha, alpha_cumprod, beta= variance_schedule(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_batch(X):\n",
+    "    X = tf.cast(X[..., tf.newaxis], tf.float32) * 2 - 1\n",
+    "    X_shape = tf.shape(X)\n",
+    "    t = tf.random.uniform([X_shape[0]], minval = 1, maxval = T + 1, dtype=tf.int32)\n",
+    "    alpha_cm = tf.gather(alpha_cumprod, t)\n",
+    "    alpha_cm = tf.reshape(alpha_cm, [X_shape[0]] + [1] * (len(X_shape) - 1))\n",
+    "    noise = tf.random.normal(X_shape)\n",
+    "    return {\n",
+    "        'X_noisy': alpha_cm ** 0.5 * X + (1 - alpha_cm) ** 0.5 * noise,\n",
+    "        'time': t\n",
+    "    }, noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-24 17:06:51.722115: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-11-24 17:06:51.722678: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-11-24 17:06:51.722689: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-11-24 17:06:51.723458: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-11-24 17:06:51.724479: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prepare_dataset(X, batch_size=32, shuffle=False):\n",
+    "    ds = tf.data.Dataset.from_tensor_slices(X)\n",
+    "    if shuffle:\n",
+    "        ds = ds.shuffle(buffer_size=10_000)\n",
+    "    return ds.batch(batch_size).map(prepare_batch).prefetch(1)\n",
+    "\n",
+    "train_set = prepare_dataset(X_train, batch_size=32, shuffle=True)\n",
+    "valid_set = prepare_dataset(X_valid, batch_size=32)"
    ]
   },
   {
